Item8956:     * css fixes for simple BUTTON     * padding fixes to tags in textboxlist formfield     * remove type="text/javascrip" as per html5     * added initializer for jquery.wikiword     * fixed jquery.debug being used without firebug console     * fixed initialization of title/values in textboxlist formfield
git-svn-id: http://svn.foswiki.org/trunk@7282 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/plugins/wikiword/Makefile
+++ b/JQueryPlugin/pub/System/JQueryPlugin/plugins/wikiword/Makefile
@@ -1,2 +1,6 @@
-TARGET=jquery.wikiword.js $(JQUERYPLUGIN_LIB)/WIKIWORD.pm
+TARGET=\
+  jquery.wikiword.js \
+  jquery.wikiword.init.js \
+  $(JQUERYPLUGIN_LIB)/WIKIWORD.pm
+
 -include ../../Makefile.include
