Item8924:    * removed pointless TOGGLE module    * reworked handling of =meta= tags by merging =foswikilibs.js= with =jquery.foswiki= module    * fixed IE7 error with floats inside tabpanes    * added ajax handler to query foswiki preferences async-ly
git-svn-id: http://svn.foswiki.org/trunk@7578 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/JQueryPlugin/pub/System/JQueryPlugin/Makefile.include
+++ b/JQueryPlugin/pub/System/JQueryPlugin/Makefile.include
@@ -26,7 +26,15 @@ jslint: subdirs $(TARGET:.js=.jslint)
 	@echo checking code quality of $<
 	@$(JSLINT) $< && touch $@
 
+%.jslint: %_src.js
+	@echo checking code quality of $<
+	@$(JSLINT) $< && touch $@
+
 %.js: %.uncompressed.js
+	@echo minifying $@ from $<
+	@$(MINIFYJS) $< > $@
+
+%.js: %_src.js
 	@echo minifying $@ from $<
 	@$(MINIFYJS) $< > $@
 
@@ -37,6 +45,11 @@ jslint: subdirs $(TARGET:.js=.jslint)
 %.css: %.uncompressed.css
 	@echo minifying $@ from $<
 	@$(MINIFYCSS) $< > $@
+
+%.css: %_src.css
+	@echo minifying $@ from $<
+	@$(MINIFYCSS) $< > $@
+
 
 subdirs: $(SUBDIRS)
 
